--- a/src/App.css
+++ b/src/App.css
@@ -295,7 +295,6 @@ background-color: rgba(178,211,226);
   height: 435px;
     width: 435px;
     border: 5px solid #162d4a;
-    opacity: 0.5;
 }
 
 .checkoutContainer{
@@ -375,7 +374,6 @@ background-color: rgba(178,211,226);
   margin-left: 20px;
   width: 150px;
   padding-left: 53px;
-  opacity: 0.5;
 }
 
 .discInput{
@@ -385,7 +383,7 @@ background-color: rgba(178,211,226);
 .cartTable{
   background-color: #162d4a;
   color: #fff;
-  padding: 20px;
+  padding: 20px 20px 0 15px;
   border-radius: 5px;
   width: 565px;
   margin-left: -26px;
@@ -400,4 +398,79 @@ background-color: rgba(178,211,226);
 
 input.form-control::placeholder{
   color : #162d4a !important; 
+  font-family: 'Cooper Lt BT', sans-serif !important; 
+  font-size: 20px !important;
+  font-weight: 500;
+}
+
+.opacity{
+  opacity: 0.5;
+}
+
+.purchaseButton{
+  background-color: rgba(22,45,74);
+  box-shadow: 8px 6px 0 0 #fff;
+  position: relative;
+  color: #fff;
+  height: 94px;
+  border: none;
+  padding-top: 30px;
+  padding-bottom: 11px;
+  padding-right: 5rem;
+  text-transform: capitalize;
+  margin-bottom: 25px !important;
+  margin-left: 12px;
+  width: 491px;
+  padding-left: 75px;
+  margin-top: 35px;
+  text-align: center;
+
+}
+
+.lockIcon{
+  height: 33px !important;
+  width: 31px !important;
+  
+}
+
+.transPara{
+  width: 448px;
+    letter-spacing: 0.02rem;
+    font-size: 18px;
+    word-spacing: 0.1rem;
+    margin-left: 50px;
+    color: #e9e3e3;
+}
+
+.checkoutFooter{
+  margin-top: 160px;
+    padding: 40px;
+}
+
+.FastCo{
+  height: 120px;
+    width: 228px;
+}
+
+.fastcoPara{
+  line-height: 39px;
+  padding: 0 51px;
+  letter-spacing: 0.01rem;
+}
+
+.todayCoPara{
+  line-height: 39px;
+    padding: 54px 38px;
+    letter-spacing: 0.01rem;
+}
+
+.popCoImg{
+  height: 24px;
+    margin-top: 18px;
+    margin-bottom: 18px;
+}
+.popCoPara{
+  line-height: 39px;
+    padding: 55px 81px;
+    letter-spacing: 0.01rem;
 }
