--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,11 @@ padding-top: 50px !important;
 
 }
 
+.navItems{
+  justify-content: space-around;
+  align-items: baseline
+}
+
 .contentHeading{
   text-transform: uppercase;
   max-width: 100%;
@@ -521,4 +526,70 @@ input.form-control::placeholder{
   opacity: 0.6; /* Example: Reduce opacity to indicate disabled state */
   cursor: not-allowed; /* Example: Change cursor to indicate button is disabled */
   /* Add more styles as needed */
+}
+
+.emailValidate{
+  background: #e92632 !important;
+  color: #fff !important;
+  font-weight: 700;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border: none;
+}
+
+
+.emailError{
+  display: block;
+    position: relative;
+    top: -20px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    font-size: 14px;
+    text-align: left;
+    padding: 7px 10px;
+    background: #ba1d27;
+    z-index: 2;
+    opacity: 1;
+
+}
+
+.form-floating>.form-control:not(:placeholder-shown)~label::after{
+  inset: 1rem 0.375rem;
+  position: initial;
+    z-index: -1;
+    height: 1.5em;
+    content: "";
+}
+
+.signupContainer{
+  width: 30%;
+  padding: 36px 70px 5px 70px;
+  border: 1px solid blue;
+  border-radius: 11px;
+  height: auto
+}
+
+.form-group{
+  text-align: justify;
+  margin-bottom: 10px;
+}
+
+.createAccountBtn{
+  background-color: rgba(22,45,74);
+  box-shadow: 8px 6px 0 0 #fff;
+  position: relative;
+  color: #fff;
+  height: 66px;
+  border: none;
+  width: 256px;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  text-transform: capitalize;
+  margin-bottom: 25px !important;
+}
+
+.textRed{
+  color: red
 }
