--- a/src/App.css
+++ b/src/App.css
@@ -132,14 +132,16 @@ color: #162d4a !important;
 padding-top: 50px !important;
 }
 
+
+
 .headerWrapper{
   background-color:rgba(178,211,226);
   text-align: center;
   width: 100%;
   padding-top: 32px;
   height: 750px;
-
 }
+
 
 .navItems{
   justify-content: space-around;
@@ -515,17 +517,14 @@ input.form-control::placeholder{
 }
 
 @media (min-width: 992px) {
-  /* Large screens and above */
   .headerImgWrapper img {
     padding-top: 108px;
   }
 }
 
 .disabledButton {
-  /* Add your custom styles for the disabled button here */
-  opacity: 0.6; /* Example: Reduce opacity to indicate disabled state */
-  cursor: not-allowed; /* Example: Change cursor to indicate button is disabled */
-  /* Add more styles as needed */
+  opacity: 0.6; 
+  cursor: not-allowed; 
 }
 
 .emailValidate{
@@ -553,6 +552,21 @@ input.form-control::placeholder{
 
 }
 
+.discError{
+  display: block;
+    position: relative;
+    top: -20px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    font-size: 14px;
+    text-align: left;
+    padding: 7px 10px;
+    background: #ba1d27;
+    z-index: 2;
+    opacity: 1;
+
+}
+
 .form-floating>.form-control:not(:placeholder-shown)~label::after{
   inset: 1rem 0.375rem;
   position: initial;
@@ -564,7 +578,6 @@ input.form-control::placeholder{
 .signupContainer{
   width: 30%;
   padding: 36px 70px 5px 70px;
-  border: 1px solid blue;
   border-radius: 11px;
   height: auto
 }
