--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,13 @@ width: 100% !important
 padding-top: 50px !important;
 }
 
+@media (min-width: 768px) { /* Larger screens */
+  .flex-row{
+    flex-direction: row !important;
+  }
+}
+
+
 
 
 .headerWrapper{
@@ -108,12 +115,6 @@ padding-top: 50px !important;
   justify-content: space-around;
   align-items: baseline
 }
-
-
-/* .contentHeading{
-  text-transform: uppercase;
-  max-width: 100%;
-} */
 
 .contentwrapper{
   text-align: start;
@@ -213,7 +214,6 @@ padding: 30px 80px 11px 75px;
 padding: 80px;
 background-color: rgba(178,211,226);
  color: #162d4a;
- /* max-width: 1280px; */
     text-align: center;
 }
 
@@ -269,7 +269,7 @@ background-color: rgba(178,211,226);
   background-image: url(./assets/Checkout/checkout_bg.jpg);
   color: #fff;
   text-align: center;
-  padding: 40px 182px;
+  padding: 40px 0px;
   background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -277,7 +277,17 @@ background-color: rgba(178,211,226);
 }
 
 .checkoutWrapper{
-  margin: 59px;
+  margin: 80px 25px
+}
+
+.formWrapper{
+  display: grid !important;
+  max-width: 510px !important;
+  align-items: center !important;
+}
+
+.form{
+max-width: 510px;
 }
 
 .formHeader{
@@ -319,19 +329,19 @@ background-color: rgba(178,211,226);
   height: 58px;
   margin-left: 10px;
   border-radius: 7px;
-  width: 270px;
+  width: 219px;
 }
 
 .checkoutPatch{
   height: 27px;
-    margin-top: 27px
+    margin-top: 17px
 }
 
 .discountBtn{
   height: 54px;
-  margin-left: 20px;
   width: 150px;
-  padding: 11px 20px
+  padding: 11px 20px;
+  margin-left: -79px;
 }
 
 .discInput{
@@ -343,8 +353,6 @@ background-color: rgba(178,211,226);
   color: #fff;
   padding: 20px 20px 0 15px;
   border-radius: 5px;
-  width: 565px;
-  margin-left: -26px;
   margin-top: 50px;
 }
 
@@ -502,6 +510,26 @@ input.form-control::placeholder{
     content: "";
 }
 
+.reviewCarousel {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.chevron {
+  font-size: 40px;
+  cursor: pointer;
+}
+
+.left {
+  margin-left: -56px;
+
+}
+
+.right {
+  margin-right: -56px;
+}
+
 .signupContainer{
   width: 30%;
   padding: 36px 70px 5px 70px;
@@ -522,6 +550,7 @@ input.form-control::placeholder{
 
 
 
+
 .headerImgWrapper.hidden-xs.hidden-sm {
   display: none;
 }
@@ -538,9 +567,8 @@ input.form-control::placeholder{
     }
 
     .headerPara {
-      padding-left: 100px;
-      width: 609px;
-      text-align: center;
+      width: 547px;
+      text-align: initial;
       font-size: 24px !important;
   }
 
@@ -559,8 +587,8 @@ input.form-control::placeholder{
       }
 
       .productImage{
-        height: 250px !important;
-        width: 250px !important;
+        height: 330px !important;
+        width: 408px !important;
       }
 
       .contentwrapper{
@@ -571,23 +599,19 @@ input.form-control::placeholder{
 
       .contentPara {
         font-size: 50px !important;
-    width: 690px !important;
-    font-weight: 300 !important;
+        width: 550px !important;
+        font-weight: 300 !important;
+        text-align: initial;
       }
-      .dis-nn.hidden-lg.hidden-ms-hidden-sm.col-lg-7.col-md-12.col-sm-12.col-12 {
-        display: block;
-    }
-    .disp-nn1.hidden-xs.col-lg-7.col-md-12.col-sm-12.col-12 {
-      display: none;
-    }
+
     .purchaseButton{
       width: 379px !important;
     }
     
-    .cartTable{
+    /* .cartTable{
       width: 404px !important;
     }
-    
+     */
     .contentHeading {
       text-align: start;
       margin-left: 0;
@@ -597,6 +621,9 @@ input.form-control::placeholder{
     .transPara{
       margin-left: 0px !important;
     }
+
+  
+
   }
 
   @media (max-width: 1080px){
@@ -606,8 +633,30 @@ input.form-control::placeholder{
     }
     }
   
-    @media(min-width: 344px) and (max-width:768px){
+    @media (max-width: 767px)
+    /* (min-width: 344px) and (max-width:768px) */
+    {
      
+      .sm-fs-30{
+        font-size: 30px !important;
+      }
+
+      .sm-fs-16{
+        font-size: 16px !important;
+      }
+
+      .sm-fs-14{
+        font-size: 14px !important;
+        font-weight: 500 !important;
+      }
+
+      .sm-fs-24{
+        font-size: 24px !important;
+      }
+
+.sm-fs-18{
+  font-size: 18px !important;
+}
       /* Small screens */
       .bunleBtn {
         display: block;
@@ -623,6 +672,10 @@ input.form-control::placeholder{
         padding-bottom: 41px !important;
       }
     
+      .rowStyle{
+        flex-direction: row-reverse;
+      }
+
       .contentwrapper{
         text-align: center !important;
         padding-top: 0px !important;
@@ -677,14 +730,101 @@ input.form-control::placeholder{
   padding: 0px !important;
   margin-left: 45px !important;
 }
+
+.reviewContainer{
+  text-align: center !important;
+  position: relative !important;
+  padding: 2.5rem !important;
+}
+
+ .flex-column-reverse-sm {
+  flex-direction: column-reverse !important;
+}
   
-  }
+.reviewWrapper{
+  margin-left: 0px !important;
+  display: block !important;
+
+}
+
+
+.currentCarouselImage {
+  height: 280px !important;
+  width: 290px !important;
+  border: 3px solid #162d4a
+}
+
+.carouselSecondImg{
+  display: none !important;
+}
+
+.leftIcon{
+  position: absolute !important;
+  top: 280px !important;
+  left: 7px !important;
+}
+
+.rightIcon{
+  position: absolute !important;
+  top: 280px !important;
+  right: 7px !important;
+}
+
+.caroselPara{
+  text-align: center !important;
+  font-size: 16px !important;
+  padding-right: 0px !important;
+  margin-left: 0px !important;
+  padding-top: 5px;
+  font-weight: 500 !important;
+}
+.breakerWrapper {
+  text-align: center !important;
+  margin-left: 0px !important;
+  margin-bottom: 0.25rem !important;
+  margin-top: 0px !important;
+}
+
+.reviewNamer {
+  text-align: center !important;
+  margin-left: 16px !important;
+  font-weight: 600 !important;
+}
+
+.checkoutWrapper{
+ margin: 0 !important;
+}
+
+.checkoutHeading{
+  font-size: 30px !important;
+}
+
+.sm-px{
+    padding-left: 20px !important;
+      padding-right: 20px !important;
+}
+
+.sm-mx{
+  margin-left: 20px !important;
+  margin-right: 20px !important;
+}
+
+.sm-inputField{
+  margin-left: -11px !important;
+  width: 170px !important;
+}
+
+.discountBtn{
+  margin-left: 0px !important;
+  width: 321px !important;
+}
+
+.purchaseButton{
+  padding: 32px 43px 11px 27px  !important;
+  width: 311px !important;
+}
+
+    }
   
-
-
-
-  /* font-size: 32px !important;
-  width: 315px !important;
-  font-weight: 800 !important;
-  line-height: 42px;
-} */
+  
+  
