--- a/src/App.css
+++ b/src/App.css
@@ -91,25 +91,25 @@ width: 100% !important
 padding-top: 50px !important;
 }
 
+.bg-blue{
+  background-color: rgba(22,45,74) !important;
+}
+
+.bg-lightBlue{
+  background-color:rgba(178,211,226) !important;
+}
+
 @media (min-width: 768px) { /* Larger screens */
   .flex-row{
     flex-direction: row !important;
   }
 }
 
-
-
-
 .headerWrapper{
-  background-color:rgba(178,211,226);
-  text-align: center;
   width: 100%;
   padding-top: 32px;
-  height: 750px;
+  height: auto;
 }
-
-
-
 
 .navItems{
   justify-content: space-around;
@@ -117,7 +117,6 @@ padding-top: 50px !important;
 }
 
 .contentwrapper{
-  text-align: start;
   padding-top: 108px;
 }
 
@@ -136,24 +135,22 @@ width: 576px;
 
 .headerBtn{
   padding-left: 35px !important;
-  text-align: start;
 }
 
-.signUpButton,
-.bunleBtn,.productButton,
-.discountBtn,
-.purchaseButton,
-.createAccountBtn{
-  background-color: rgba(22,45,74);
+.customBtn{
   box-shadow: 8px 6px 0 0 #fff;
   position: relative;
-  color: #fff;
   height: 66px;
   border: none;
-  width: 256px;
   text-transform: capitalize;
-  margin-bottom: 25px !important;
   padding: 1.25rem 5rem;
+}
+
+
+.bunleBtn
+{
+  width: 256px;
+  margin-bottom: 25px !important;
 }
 
 .purchaseButton{
@@ -161,8 +158,7 @@ width: 576px;
   margin-left: 12px;
   width: 491px;
   margin-top: 35px;
-  text-align: center;
-padding: 30px 80px 11px 75px;
+  padding: 30px 60px 11px 47px;;
 }
 
 .headerImgWrapper{
@@ -172,7 +168,6 @@ padding: 30px 80px 11px 75px;
 
 .productDetailWrapper{
   background-color: #f9ece4;
-  text-align: center;
   padding-top: 5rem;
   height: 1000px;
   padding: 80px;
@@ -186,17 +181,13 @@ padding: 30px 80px 11px 75px;
 
 .productContainer{
   justify-content: space-between;
-    display: flex;
      margin-top: 70px;
-    margin-right: 250px;
-    margin-left: 159px; 
 }
 
 
 .productImage{
   border: 5px solid;
     margin-bottom: 1.25rem;
-    margin-left: 29px;
 }
 
 
@@ -219,7 +210,6 @@ background-color: rgba(178,211,226);
 
 
 .reviewWrapper{
-  text-align: center;
   align-items: center;
   justify-content: space-around;
   max-width: 1300px;
@@ -267,8 +257,6 @@ background-color: rgba(178,211,226);
 
 .checkoutContainer{
   background-image: url(./assets/Checkout/checkout_bg.jpg);
-  color: #fff;
-  text-align: center;
   padding: 40px 0px;
   background-position: 50%;
     background-repeat: no-repeat;
@@ -299,8 +287,6 @@ max-width: 510px;
 
 .footerContainer{
   background-color: #162d4a;
-  color: #fff;
-  text-align: center;
   align-items: center;
   padding-top: 10rem;
   padding-bottom: 10rem;
@@ -349,8 +335,7 @@ max-width: 510px;
 }
 
 .cartTable{
-  background-color: #162d4a;
-  color: #fff;
+  /* background-color: #162d4a; */
   padding: 20px 20px 0 15px;
   border-radius: 5px;
   margin-top: 50px;
@@ -432,12 +417,6 @@ input.form-control::placeholder{
   max-width: 100%; /* Ensure the logo doesn't exceed its container */
   height: auto;
 }
-.dis-nn.hidden-lg.hidden-ms-hidden-sm.col-lg-7.col-md-12.col-sm-12.col-12 {
-  display: none;
-}
-.disp-nn1.hidden-xs.col-lg-7.col-md-12.col-sm-12.col-12 {
-  display: block;
-}
 
 /* Adjust margins and paddings for smaller screens */
 .textContainer {
@@ -455,6 +434,10 @@ input.form-control::placeholder{
   .headerImgWrapper img {
     padding-top: 0px;
   }
+
+  .container{
+    max-width: 100% !important;
+  }
 }
 
 .disabledButton {
@@ -464,8 +447,6 @@ input.form-control::placeholder{
 
 .emailValidate{
   background: #e92632 !important;
-  color: #fff !important;
-  font-weight: 700;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   border: none;
@@ -555,8 +536,36 @@ input.form-control::placeholder{
   display: none;
 }
 
+@media(max-width: 768px){
+  .productDetailWrapper {
+    padding: 35px;
+}
 
-  @media(min-width: 768px){
+.productImage{
+  height: auto !important;
+  width: 100% !important;
+}
+
+.productdesc{
+  font-size: 16px !important;
+    font-weight: 600 !important;
+    padding-right: 0rem!important; 
+    padding-left: 0rem!important;
+    margin-right: 0rem!important;
+    margin-left: 0rem!important;
+}
+
+.reviewWrapper{
+  margin-left: 0px !important;
+}
+
+.carouselSecondImg{
+  display: none !important;
+}
+}
+
+
+  @media(min-width: 769px){
     .navItems{
       margin: 33px 5px !important;
     }
@@ -567,29 +576,16 @@ input.form-control::placeholder{
     }
 
     .headerPara {
-      width: 547px;
+      width: auto !important;
       text-align: initial;
       font-size: 24px !important;
   }
-
-  .headerBtn {
-     text-align: center; 
-}
-
     .signUpButton{
       font-size: 24px !important;
       height: 50% !important;
       }
 
-      .productContainer{
-        display: flex !important;
 
-      }
-
-      .productImage{
-        height: 330px !important;
-        width: 408px !important;
-      }
 
       .contentwrapper{
         text-align: center !important;
@@ -599,7 +595,7 @@ input.form-control::placeholder{
 
       .contentPara {
         font-size: 50px !important;
-        width: 550px !important;
+        width: auto !important;
         font-weight: 300 !important;
         text-align: initial;
       }
@@ -704,7 +700,7 @@ input.form-control::placeholder{
     .signUpButton{
       width: 138px !important;
       padding: 0px !important;
-      margin-left: 77px !important;
+      /* margin-left: 77px !important; */
     }
 
     .productImage {
@@ -754,9 +750,9 @@ input.form-control::placeholder{
   border: 3px solid #162d4a
 }
 
-.carouselSecondImg{
+/* .carouselSecondImg{
   display: none !important;
-}
+} */
 
 .leftIcon{
   position: absolute !important;
@@ -775,9 +771,11 @@ input.form-control::placeholder{
   font-size: 16px !important;
   padding-right: 0px !important;
   margin-left: 0px !important;
-  padding-top: 5px;
-  font-weight: 500 !important;
+  padding-top: 10px !important;
+  font-weight: 700 !important;
+
 }
+
 .breakerWrapper {
   text-align: center !important;
   margin-left: 0px !important;
@@ -799,12 +797,28 @@ input.form-control::placeholder{
   font-size: 30px !important;
 }
 
+.checkBoxWrapper{
+  align-items: baseline !important;
+  text-align: initial !important;
+  margin-bottom: 0px !important;
+}
+
+.checkBoxWrapper p{
+  padding-left: 15px !important;
+  padding-right: 0px !important;
+}
+
 .sm-px{
     padding-left: 20px !important;
       padding-right: 20px !important;
 }
 
-.sm-mx{
+.sm-pr{
+  padding-right: 20px !important;
+}
+
+.sm-mx{    align-items: baseline;
+  text-align: initial;
   margin-left: 20px !important;
   margin-right: 20px !important;
 }
@@ -822,6 +836,71 @@ input.form-control::placeholder{
 .purchaseButton{
   padding: 32px 43px 11px 27px  !important;
   width: 311px !important;
+}
+
+.transPara p{
+  width: 324px !important;
+  letter-spacing: 0;
+  word-spacing: 0;
+  font-weight: 600 !important;
+  font-size: 18px !important;
+}
+
+.checkoutFooter{
+  margin-top: 40px !important;
+    padding: 37px 0px !important;
+}
+
+.FastCo {
+  height: 97px !important;
+  width: 201px !important;
+}
+
+.fastcoPara {
+  line-height: 32px !important;
+  padding: 25px 0px !important;
+  font-size: 20px !important;
+  margin-bottom: 40px !important;
+}
+
+.todayCoImg{
+  height: 100px !important;
+}
+
+.todayCoPara {
+  line-height: 32px;
+  padding: 40px 23px;
+  letter-spacing: 0.01rem;
+  font-size: 22px !important;
+}
+
+.popCoImg {
+  height: 15px !important; 
+  margin-top: 40px !important;
+  max-width: 45% !important;
+}
+
+.popCoPara {
+  line-height: 35px;
+  padding: 34px 40px;
+  letter-spacing: 0.01rem;
+  font-size: 20px !important;
+}
+
+ .headerBtn {
+     text-align: center !important; 
+}
+
+.modal-content{
+  width: 49% !important;
+}
+
+.modal-dialog-centered{
+  align-items: baseline !important;
+}
+
+.customBtn {
+  padding: 1.25rem 1rem 2rem !important;
 }
 
     }
